unpackaged/main/default/objects/simplesms__Media__c/simplesms__Media__c.object-meta.xml
<CustomObject>
    <label>Media</label>
    <nameField>
        <displayFormat>Media-{00000}</displayFormat>
        <label>Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>