unpackaged/main/default/objects/simplesms__Media__c/fields/simplesms__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Content_Type__c</fullName>
    <description>The MIME Content-Type for this media object.  Valid types are &quot;image/jpeg&quot;, &quot;image/gif&quot;, &quot;image/png&quot;.</description>
    <inlineHelpText>The MIME Content-Type for this media object.  Valid types are &quot;image/jpeg&quot;, &quot;image/gif&quot;, &quot;image/png&quot;.</inlineHelpText>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>image/jpeg</fullName>
            </value>
            <value>
                <fullName>image/gif</fullName>
            </value>
            <value>
                <fullName>image/png</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>