unpackaged/main/default/objects/simplesms__Media__c/fields/simplesms__Media__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Media__c</fullName>
    <description>Displays the image.</description>
    <formula>IF( 
    CONTAINS( TEXT( simplesms__Content_Type__c ), &quot;image&quot; )
   ,IMAGE(simplesms__Media_Url__c , &quot;Image from Sender&quot; )
   ,HYPERLINK(simplesms__Media_Url__c, &quot;View Media&quot;)
)</formula>
    <inlineHelpText>Displays the image.</inlineHelpText>
    <label>Media</label>
    <type>Text</type>
</CustomField>