unpackaged/main/default/objects/simplesms__Media__c/fields/simplesms__Media_Url__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Media_Url__c</fullName>
    <description>The external URL for this image.</description>
    <inlineHelpText>The external URL for this image.</inlineHelpText>
    <label>Media Url</label>
    <type>Url</type>
</CustomField>