unpackaged/main/default/objects/simplesms__Media__c/fields/simplesms__SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__SMS_Message__c</fullName>
    <description>The related SMS Message.</description>
    <inlineHelpText>The related SMS Message.</inlineHelpText>
    <label>SMS Message</label>
    <referenceTo>simplesms__SMS_Message__c</referenceTo>
    <relationshipLabel>Media</relationshipLabel>
    <relationshipName>Media</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>